test_src/compiler_errors/types/arithmetic/MultiplyBoolError2.b
class MultiplyBoolError2 {
    void test() {
        println(2 * false);
    }
}
